Test for vh fix on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -514,3 +514,13 @@ html, body {
     text-align: center;
     color: red;
 }
+
+body {
+	min-height: 100vh;
+	/* mobile viewport bug fix */
+	min-height: -webkit-fill-available;
+}
+
+html {
+	height: -webkit-fill-available;
+}
